<resources>
    <string name="RES_2131558400">Add bookmark</string>
    <string name="RES_2131558401">Add to homepage</string>
    <string name="RES_2131558402">Allow</string>
    <string name="RES_2131558403">Blank page</string>
    <string name="RES_2131558404">Block domain</string>
    <string name="RES_2131558405">Block link</string>
    <string name="RES_2131558406">Bookmarks</string>
    <string name="RES_2131558407">Press to view</string>
    <string name="RES_2131558408">Copy link</string>
    <string name="RES_2131558409">Copy download link</string>
    <string name="RES_2131558410">Copy link text</string>
    <string name="RES_2131558411">Copy text</string>
    <string name="RES_2131558412">Delete</string>
    <string name="RES_2131558413">Delete all</string>
    <string name="RES_2131558414">Delete</string>
    <string name="RES_2131558415">Refuse</string>
    <string name="RES_2131558416">Downloads</string>
    <string name="RES_2131558417">Edit this</string>
    <string name="RES_2131558418">Find in page</string>
    <string name="RES_2131558419">Full-screen</string>
    <string name="RES_2131558420">History</string>
    <string name="RES_2131558421">Block images</string>
    <string name="RES_2131558422">Incognito mode</string>
    <string name="RES_2131558423">Network log</string>
    <string name="RES_2131558424">Mark as ad</string>
    <string name="RES_2131558425">Modify</string>
    <string name="RES_2131558426">New</string>
    <string name="RES_2131558427">New tab</string>
    <string name="RES_2131558428">Night mode</string>
    <string name="RES_2131558429">Open in background</string>
    <string name="RES_2131558430">Open in new tab</string>
    <string name="RES_2131558431">Page info</string>
    <string name="RES_2131558432">Desktop site</string>
    <string name="RES_2131558433">Picture mode</string>
    <string name="RES_2131558434">Play with…</string>
    <string name="RES_2131558435">Preview</string>
    <string name="RES_2131558436">Re-download</string>
    <string name="RES_2131558437">Save image</string>
    <string name="RES_2131558438">Save web page</string>
    <string name="RES_2131558439">Saved web pages</string>
    <string name="RES_2131558440">Send to the launcher</string>
    <string name="RES_2131558441">Share</string>
    <string name="RES_2131558442">View source</string>
    <string name="RES_2131558443">Tools</string>
    <string name="RES_2131558444">Translate</string>
    <string name="RES_2131558445">User-agent</string>
    <string name="RES_2131558446">Unblock domain</string>
    <string name="RES_2131558447">Unblock link</string>
    <string name="RES_2131558448">View image</string>
    <string name="RES_2131558449">Web page</string>
    <string name="RES_2131558450">Enabled: %1$d ads blocked, %2$s saved</string>
    <string name="RES_2131558451">Add filter subscription</string>
    <string name="RES_2131558452">Add filter</string>
    <string name="RES_2131558453">Add script</string>
    <string name="RES_2131558454">Added to homepage successfully</string>
    <string name="RES_2131558455">Download manager</string>
    <string name="RES_2131558456">User-agent</string>
    <string name="RES_2131558457">Chrome (PC)</string>
    <string name="RES_2131558458">Custom</string>
    <string name="RES_2131558459">IE 11 (PC)</string>
    <string name="RES_2131558460">Safari (iPhone)</string>
    <string name="RES_2131558461">Nokia Browser</string>
    <string name="RES_2131558462">all sites</string>
    <string name="RES_2131558463">Allow once</string>
    <string name="RES_2131558464">It has already been set as default</string>
    <string name="RES_2131558465">Always restore</string>
    <string name="RES_2131558466">Via</string>
    <string name="RES_2131558467">Ask first</string>
    <string name="RES_2131558468">Back/Forward gesture</string>
    <string name="RES_2131558469">Opacity of background</string>
    <string name="RES_2131558470">Baidu</string>
    <string name="RES_2131558471">Bing</string>
    <string name="RES_2131558472">Block 3rd party cookies</string>
    <string name="RES_2131558473">Ad blocking</string>
    <string name="RES_2131558474">Blocked: %s\nRefresh to take effect.</string>
    <string name="RES_2131558475">Block pop-up</string>
    <string name="RES_2131558476">Blocked pop-up window</string>
    <string name="RES_2131558477">Bookmarks exported to\n</string>
    <string name="RES_2131558478">Bookmarks data is too big to upload, but other data will be uploaded normally. Continue?</string>
    <string name="RES_2131558479">Bookmarks exported successfully</string>
    <string name="RES_2131558480">Bookmarks export</string>
    <string name="RES_2131558481">It can be downloaded only from \"http\" or \"https\" URLs.</string>
    <string name="RES_2131558482">It can only work with \"http\" or \"https\" URLs.</string>
    <string name="RES_2131558483">Catalog</string>
    <string name="RES_2131558484">Permission denied. Would you like to set it in settings now?</string>
    <string name="RES_2131558485">Chinese</string>
    <string name="RES_2131558486">Clear data</string>
    <string name="RES_2131558487">Clear data on exit</string>
    <string name="RES_2131558488">Cloud data server</string>
    <string name="RES_2131558489">Service unavailable.</string>
    <string name="RES_2131558490">Color mode</string>
    <string name="RES_2131558491">Auto-adjust color of toolbars</string>
    <string name="RES_2131558492">Confirm to leave</string>
    <string name="RES_2131558493">Connection timed out</string>
    <string name="RES_2131558494">Contact us</string>
    <string name="RES_2131558495">Close</string>
    <string name="RES_2131558496">We\'re sorry that the app crashed.</string>
    <string name="RES_2131558497">Something went wrong. :(</string>
    <string name="RES_2131558498">Restart</string>
    <string name="RES_2131558499">Upload the crash log</string>
    <string name="RES_2131558500">Current language</string>
    <string name="RES_2131558501">Add custom CSS</string>
    <string name="RES_2131558502">Custom filter</string>
    <string name="RES_2131558503">Custom filters</string>
    <string name="RES_2131558504">Including custom filters, marked ads</string>
    <string name="RES_2131558505">Custom URL</string>
    <string name="RES_2131558506">Cache</string>
    <string name="RES_2131558507">Data cleared</string>
    <string name="RES_2131558508">Cookies</string>
    <string name="RES_2131558509">Data exported successfully</string>
    <string name="RES_2131558510">Data export</string>
    <string name="RES_2131558511">Form data</string>
    <string name="RES_2131558512">History</string>
    <string name="RES_2131558513">Web storage</string>
    <string name="RES_2131558514">Default</string>
    <string name="RES_2131558515">Bookmarks in folder %s will also be deleted. Are you sure?</string>
    <string name="RES_2131558516">Failed to delete. The file is located in download path:</string>
    <string name="RES_2131558517">Back</string>
    <string name="RES_2131558518">File</string>
    <string name="RES_2131558519">Forward</string>
    <string name="RES_2131558520">Home</string>
    <string name="RES_2131558521">Menu</string>
    <string name="RES_2131558522">Reload</string>
    <string name="RES_2131558523">Find in page</string>
    <string name="RES_2131558524">Suggestion</string>
    <string name="RES_2131558525">Tab</string>
    <string name="RES_2131558526">Would you like to mark this as ad?</string>
    <string name="RES_2131558527">Would you like to download this file?</string>
    <string name="RES_2131558528">Message</string>
    <string name="RES_2131558529">Message from %s</string>
    <string name="RES_2131558530">Are you sure you want to proceed?</string>
    <string name="RES_2131558531">Disabled</string>
    <string name="RES_2131558532">Don\'t restore</string>
    <string name="RES_2131558533">Do not track</string>
    <string name="RES_2131558534">Donate</string>
    <string name="RES_2131558535">If you like Via browser, you can donate to support us.\nAlipay: 2376688759@qq.com\nPayPal: wiar1824@gmail.com</string>
    <string name="RES_2131558536">Download location</string>
    <string name="RES_2131558537">Download completed</string>
    <string name="RES_2131558538">Download failed</string>
    <string name="RES_2131558539">USB storage is required to download the file.</string>
    <string name="RES_2131558540">No memory card</string>
    <string name="RES_2131558541">Download notification</string>
    <string name="RES_2131558542">Starting download…</string>
    <string name="RES_2131558543">Storage is busy. To allow downloads, select \"Turn Off USB Storage\" in the notification panel.</string>
    <string name="RES_2131558544">USB storage is unavailable</string>
    <string name="RES_2131558545">DuckDuckGo</string>
    <string name="RES_2131558546">Edit filter subscription</string>
    <string name="RES_2131558547">Empty</string>
    <string name="RES_2131558548">Please input your password</string>
    <string name="RES_2131558549">Please input your username</string>
    <string name="RES_2131558550">Enable built-in filters</string>
    <string name="RES_2131558551">Built-in filters only block common ads</string>
    <string name="RES_2131558552">Enable site configuration for %s</string>
    <string name="RES_2131558553">Export bookmarks</string>
    <string name="RES_2131558554">Export data</string>
    <string name="RES_2131558555">Export data to: %s</string>
    <string name="RES_2131558556">The file does not exist</string>
    <string name="RES_2131558557">File size</string>
    <string name="RES_2131558558">The filter subscription already exists.</string>
    <string name="RES_2131558559">%s, %s</string>
    <string name="RES_2131558560">Filter subscriptions</string>
    <string name="RES_2131558561">Subscribe Adblock Plus filter lists</string>
    <string name="RES_2131558562">Find next</string>
    <string name="RES_2131558563">Find last</string>
    <string name="RES_2131558564">Force close</string>
    <string name="RES_2131558565">Enable force zoom</string>
    <string name="RES_2131558566">Auto-hide toolbars</string>
    <string name="RES_2131558567">Disabled</string>
    <string name="RES_2131558568">Scroll to hide/show</string>
    <string name="RES_2131558569">Press to hide/show</string>
    <string name="RES_2131558570">Get more scripts</string>
    <string name="RES_2131558571">Glean</string>
    <string name="RES_2131558572">Global</string>
    <string name="RES_2131558573">Google</string>
    <string name="RES_2131558574">Haosou</string>
    <string name="RES_2131558575">has not been updated</string>
    <string name="RES_2131558576">Help</string>
    <string name="RES_2131558577">Help us translate</string>
    <string name="RES_2131558578">Folder</string>
    <string name="RES_2131558579">Password</string>
    <string name="RES_2131558580">Tags</string>
    <string name="RES_2131558581">Title</string>
    <string name="RES_2131558582">URL</string>
    <string name="RES_2131558583">Username</string>
    <string name="RES_2131558584">You\'ve gone incognito. History will not be recorded.</string>
    <string name="RES_2131558585">Homepage</string>
    <string name="RES_2131558586">HTML code</string>
    <string name="RES_2131558587">Ignore secondary SSL error</string>
    <string name="RES_2131558588">Ignore SSL error today</string>
    <string name="RES_2131558678">Resource sniffer</string>
    <string name="RES_2131558692">Would you like to set it as homepage?</string>
    <string name="RES_2131558702">Gestures</string>
    <string name="RES_2131558721">Background</string>
    <string name="RES_2131558725">Logo</string>
    <string name="RES_2131558726">Settings</string>
    <string name="RES_2131558727">Style</string>
    <string name="RES_2131558751">Exit full-screen mode</string>
</resources>