<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center" android:orientation="horizontal" android:id="@+id/RES_2131230775" android:layout_width="match_parent" android:layout_height="@dimen/RES_2131099648">
    <ImageView android:id="@+id/RES_2131230777" android:layout_width="0dp" android:layout_height="match_parent" android:src="@drawable/RES_2131165202" android:layout_weight="1" android:contentDescription="@string/RES_2131558517" style="@style/RES_2131623955"/>
    <ImageView android:id="@+id/RES_2131230778" android:layout_width="0dp" android:layout_height="match_parent" android:src="@drawable/RES_2131165211" android:layout_weight="1" android:contentDescription="@string/RES_2131558519" style="@style/RES_2131623955"/>
    <ImageView android:id="@+id/RES_2131230779" android:layout_width="0dp" android:layout_height="match_parent" android:src="@drawable/RES_2131165214" android:layout_weight="1" android:contentDescription="@string/RES_2131558520" style="@style/RES_2131623955"/>
    <FrameLayout android:id="@+id/RES_2131230764" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
        <TextView android:textSize="11dp" android:textColor="?attr/a" android:gravity="center" android:id="@+id/RES_2131230781" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <ImageView android:id="@+id/RES_2131230782" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/RES_2131165242" android:contentDescription="@string/RES_2131558525" style="@style/RES_2131623955"/>
    </FrameLayout>
    <ImageView android:id="@+id/RES_2131230780" android:layout_width="0dp" android:layout_height="match_parent" android:src="@drawable/RES_2131165217" android:layout_weight="1" android:contentDescription="@string/RES_2131558521" style="@style/RES_2131623955"/>
</LinearLayout>
