<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/RES_2131230737" android:background="?attr/RES_2130903042" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <EditText android:textSize="@dimen/h" android:textColor="?attr/b" android:textColorHint="?attr/c" android:id="@+id/RES_2131230740" android:background="@android:color/transparent" android:paddingLeft="8dp" android:paddingTop="5dp" android:paddingRight="8dp" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:hint="@string/RES_2131558418" android:maxLines="1" android:singleLine="true" android:selectAllOnFocus="true" android:layout_toLeftOf="@+id/RES_2131230739" android:layout_alignParentLeft="true" android:inputType="none"/>
    <View android:background="@color/RES_2131034142" android:layout_width="wrap_content" android:layout_height="1dp" android:layout_below="@+id/RES_2131230740" android:layout_alignLeft="@+id/RES_2131230740" android:layout_alignRight="@+id/RES_2131230740"/>
    <ImageView android:id="@+id/RES_2131230739" android:background="@drawable/a" android:padding="5dp" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/RES_2131165224" android:tint="?attr/a" android:layout_toLeftOf="@+id/RES_2131230738" android:layout_alignTop="@+id/RES_2131230740" android:layout_alignBottom="@+id/RES_2131230740" android:contentDescription="@string/RES_2131558563"/>
    <ImageView android:id="@+id/RES_2131230738" android:background="@drawable/a" android:padding="5dp" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/RES_2131165218" android:tint="?attr/a" android:layout_alignTop="@+id/RES_2131230740" android:layout_alignBottom="@+id/RES_2131230740" android:layout_alignParentRight="true" android:contentDescription="@string/RES_2131558562"/>
</RelativeLayout>
