<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/RES_2131230765" android:focusable="true" android:focusableInTouchMode="true" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:id="@+id/RES_2131230743" android:layout_width="match_parent" android:layout_height="match_parent" android:foreground="?attr/RES_2130903050" android:layout_above="@+id/RES_2131230776" android:layout_below="@+id/RES_2131230804" android:layout_alignWithParentIfMissing="true"/>
    <ProgressBar android:id="@+id/RES_2131230761" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="match_parent" android:layout_height="2.5dp" android:max="100" android:indeterminate="false" android:indeterminateOnly="false" android:progressDrawable="@drawable/RES_2131165245" android:layout_below="@+id/RES_2131230804"/>
    <ImageView android:id="@+id/RES_2131230725" android:background="@drawable/RES_2131165244" android:padding="10dp" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="@dimen/RES_2131099650" android:layout_height="@dimen/RES_2131099650" android:layout_marginLeft="25dp" android:layout_marginRight="25dp" android:layout_marginBottom="79dp" android:src="@drawable/RES_2131165226" android:tint="@color/RES_2131034117" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:contentDescription="@string/RES_2131558678"/>
    <ImageView android:id="@+id/RES_2131230723" android:background="@drawable/RES_2131165187" android:padding="10dp" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="@dimen/RES_2131099650" android:layout_height="@dimen/RES_2131099650" android:layout_marginBottom="@dimen/RES_2131099649" android:src="@drawable/RES_2131165217" android:tint="@color/RES_2131034117" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:contentDescription="@string/RES_2131558751"/>
    <FrameLayout android:id="@+id/RES_2131230804" android:layout_width="match_parent" android:layout_height="wrap_content">
        <include layout="@layout/RES_2131361797"/>
    </FrameLayout>
    <FrameLayout android:id="@+id/RES_2131230776" android:background="?attr/RES_2130903041" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <include layout="@layout/RES_2131361796"/>
    </FrameLayout>
    <ImageView android:id="@+id/RES_2131230724" android:background="@drawable/RES_2131165244" android:padding="30dp" android:visibility="visible" android:layout_width="@dimen/RES_2131099668" android:layout_height="@dimen/RES_2131099668" android:layout_marginLeft="@dimen/RES_2131099667" android:src="@drawable/RES_2131165202" android:tint="@android:color/white" android:layout_centerVertical="true" android:contentDescription="@string/RES_2131558702"/>
</RelativeLayout>
